syntax = "proto3";

import "validate.proto";
import "google/api/annotations.proto";

option go_package = "proto/lomscd;pb";

service LomsService {
  rpc OrderCreate (OrderCreateRequest) returns (OrderCreateResponse) {
    option(google.api.http) = {
      post: "/order/create",
      body: "*"
    };
  }
  rpc OrderInfo (OrderInfoRequest) returns (OrderInfoResponse) {
    option(google.api.http) = {
      get: "/order/info/{OrderID}"
    };
  }
  rpc OrderPay (OrderPayRequest) returns (OrderPayResponse) {
    option(google.api.http) = {
      post: "/order/{OrderID}/pay",
      body: "*"
    };
  }
  rpc OrderCancel (OrderCancelRequest) returns (OrderCancelResponse) {
    option(google.api.http) = {
      post: "/order/{OrderID}/cancel",
      body: "*"
    };
  }
  rpc StocksInfo (StocksInfoRequest) returns (StocksInfoResponse) {
    option(google.api.http) = {
      get: "/stock/info/{sku}"
    };
  }
}

message OrderItem {
  uint32 sku = 1 [(validate.rules).uint32 = {gt: 0}];
  uint32 count = 2 [(validate.rules).uint32 = {gt: 0}];
}

message OrderCreateRequest {
  int64 userID = 1 [(validate.rules).int64 = {gt: 0}];
  repeated OrderItem items = 2 [(validate.rules).repeated = {min_items: 1}];
}

message OrderCreateResponse {
  int64 OrderID = 1 [(validate.rules).int64 = {gt: 0}];
}

message OrderInfoRequest {
  int64 OrderID = 1 [(validate.rules).int64 = {gt: 0}];
}

message OrderInfoResponse {
  string status = 1 [(validate.rules).string = {
    min_len: 3,
    max_len: 140
  }];
  int64 userID = 2 [(validate.rules).int64 = {gt: 0}];
  repeated OrderItem items = 3;
}

message OrderPayRequest {
  int64 OrderID = 1 [(validate.rules).int64 = {gt: 0}];
}

message OrderPayResponse {}

message OrderCancelRequest{
  int64 OrderID = 1 [(validate.rules).int64 = {gt: 0}];
}
message OrderCancelResponse{}

message StocksInfoRequest {
  uint32 sku = 1 [(validate.rules).uint32 = {gt: 0}];
}

message StocksInfoResponse {
  uint64 count = 1;
}